[package]
edition = "2021"
name = "rp-embassy"
version = "0.1.0"

[dependencies]
rp2040-hal = { version = "0.6.0", features = ["critical-section-impl"] }
# embassy-sync = { version = "0.1.0", features = ["defmt"] }
# embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
# embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
# embassy-futures = { version = "0.1.0" }
embassy-sync = { git = "https://github.com/fluffware/embassy", branch = "ksb_pio_pwm", features = ["defmt"] }
embassy-executor = { git = "https://github.com/fluffware/embassy", branch = "ksb_pio_pwm", features = ["defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/fluffware/embassy", branch = "ksb_pio_pwm", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/fluffware/embassy", branch = "ksb_pio_pwm", features = ["pio", "defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-futures = { git = "https://github.com/fluffware/embassy", branch = "ksb_pio_pwm" }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }
embedded-io = { version = "0.3.0", features = ["async", "defmt"] }

pio = "0.2.0"
pio-proc = "0.2.0"

[patch.crates-io]
pio = {git = "https://github.com/rp-rs/pio-rs.git"}

# [patch.crates-io]
# embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy" }
# embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

[profile.release]
debug = true